<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EdtClienteActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="11dp"
        android:text="@string/texto_edicao"
        android:textColor="@color/color_texto_edicao"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/texto_edicao" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtNomeEdtId"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/texto_campo_nome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtEmailEdtId"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/texto_campo_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtTelefoneEdtId"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/texto_campo_telefone"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAtualizarId"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/color_fundo_botao_atualizar"
        android:text="@string/texto_botao_atualizar"
        android:textColor="@color/color_texto_botao_1"
        android:textStyle="bold"
        tools:text="@string/texto_botao_atualizar" />

    <Button
        android:id="@+id/btnExcluirId"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/color_fundo_botao_excluir"
        android:text="@string/texto_botao_excluir"
        android:textColor="@color/color_texto_botao_1"
        tools:text="@string/texto_botao_excluir" />

    <Button
        android:id="@+id/btnCancelarEdtId"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/color_fundo_botao_cancelar"
        android:text="@string/texto_botao_cancelar"
        android:textColor="@color/color_texto_botao_1"
        android:textStyle="bold"
        tools:text="@string/texto_botao_cancelar" />


</LinearLayout>