<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoAppActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/texto_informacoes"
        android:textColor="#f80404"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/texto_informacoes" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/texto_versao"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/texto_versao" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/texto_plataforma"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/texto_plataforma" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/texto_observacoes"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/texto_observacoes" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="346dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="349dp"
            android:layout_height="345dp">


            <TextView
                android:layout_width="349dp"
                android:layout_height="wrap_content"
                android:text="Aplicação Lista de Clientes tem como objetivo o cadastro e a  manipulação de uma lista de contato de clientes, através de simples toques na tela do dispositivo é possivel ter acesso a tela para inserir nome, email e telefone em uma fácil navegação. Na tela principal do programa fica uma lista com os dados registrados, para adicionar novos contatos dos clientes é preciso acessar o menu superior no qual consta dois símbolos um com o sinal do mais (+) para abrir o formulário de cadastro e o menu com o sinal de informação (!) onde contém algumas informações de uso. Após cadastrar qualquer contato caso deseje  fazer alterações ou exclusão bastar selecionar o nome na lista e clicar em cima do mesmo para abrir o formulário de edição."
                android:textSize="18sp"
                android:textStyle="bold" />


        </ScrollView>


    </LinearLayout>

</LinearLayout>